fix menu stacking on mobile

--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -1,26 +1,31 @@
 // Info
 
+@mixin mobileStack {
+  display: flex;
+  flex-direction: column;
+
+  & > *:first-child {
+    margin-bottom: .9rem;
+  }
+
+  & > *:not(:first-child) {
+    margin-bottom: .3rem;
+  }
+}
+
 #info {
   margin-top: 0;
 
   .js-is-sticky--change & {
-    display: flex;
-    flex-direction: column;
+    @include mobileStack;
+  }
 
-    & > *:first-child {
-      margin-bottom: .9rem;
-    }
-
-    & > *:not(:first-child) {
-      margin-bottom: .3rem;
-    }
-
-    & > * {
-      align-self: flex-start;
-    }
+  @media (max-width: 600px) {
+    @include mobileStack;
   }
 
   & > * {
+    align-self: flex-start;
     padding: 2px;
 
     &:not(:last-child) {
